NetBSD Problem Report #52136

From www@NetBSD.org  Mon Apr  3 16:48:33 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 4435D7A1FE
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  3 Apr 2017 16:48:33 +0000 (UTC)
Message-Id: <20170403164832.69A5E7A285@mollari.NetBSD.org>
Date: Mon,  3 Apr 2017 16:48:32 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: sys/dev/ic/igsfb_subr.c:440: poor location for limits check ?
X-Send-Pr-Version: www-1.0

>Number:         52136
>Category:       kern
>Synopsis:       sys/dev/ic/igsfb_subr.c:440: poor location for limits check ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Apr 03 16:50:00 +0000 2017
>Closed-Date:    Mon Apr 03 19:05:36 +0000 2017
>Last-Modified:  Mon Apr 03 19:05:36 +0000 2017
>Originator:     David Binderman
>Release:        cvs-20170403
>Organization:
>Environment:
>Description:

sys/dev/ic/igsfb_subr.c:440]: (style) Array index 'i' is used before limits check.

Source code is

    while ((strcmp(dc->dc_modestring, videomode_list[i].name) != 0) &&
           ( i < videomode_count)) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52136 CVS commit: src/sys/dev/ic
Date: Mon, 3 Apr 2017 13:40:07 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Mon Apr  3 17:40:07 UTC 2017

 Modified Files:
 	src/sys/dev/ic: igsfb_subr.c

 Log Message:
 PR/52136: David Binderman: Rewrite loop to fix bounds check.


 To generate a diff of this commit:
 cvs rdiff -u -r1.13 -r1.14 src/sys/dev/ic/igsfb_subr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: leot@NetBSD.org
State-Changed-When: Mon, 03 Apr 2017 19:05:36 +0000
State-Changed-Why:
Fixed by <christos>.
Thank you David for the PR and thanks to Christos for fixing it!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.