PR/52136: David Binderman: Rewrite loop to fix bounds check.